--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.HomeActivity">
 
+    <fragment
+        android:id="@+id/calculate_fragment"
+        android:name="com.example.nutritionsapp.ui.CalculateFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
