--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#37B64B</color>
     <color name="dark_green">#022508</color>
+    <color name="gray_mid">#C4C4C4</color>
 </resources>
