--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,6 +31,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/collections_for_you"/>
 
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/chart1"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="32dp"
+        android:elevation="2dp"
+        app:layout_constraintStart_toStartOf="@id/main_card"
+        app:layout_constraintEnd_toEndOf="@id/main_card"
+        app:layout_constraintTop_toTopOf="@id/main_card"/>
+
     <TextView
         android:id="@+id/collections_for_you"
         android:layout_width="wrap_content"
