--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/calculate_fragment"
-        android:name="com.example.nutritionsapp.ui.CalculateFragment"
+        android:name="com.example.nutritionsapp.ui.CalorieFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
