--- a/app/src/main/res/layout/fragment_calorie.xml
+++ b/app/src/main/res/layout/fragment_calorie.xml
@@ -54,6 +54,15 @@
             android:textStyle="bold" />
 
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/calculated_items_pie_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="88dp"
+            android:layout_marginEnd="28dp"
+
+            />
     </androidx.cardview.widget.CardView>
 
 
