use pie chart in home screen

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.HomeActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/main_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.example.nutritionsapp.ui.HomeFragment"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
