--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:text="@string/find_track_and_eat_healthy_food"
         android:textSize="14sp"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="220dp"
         android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="24dp"
         app:cardCornerRadius="16dp"
         app:cardBackgroundColor="#F5F5F5"
         app:layout_constraintTop_toBottomOf="@id/head_text"
@@ -32,14 +32,14 @@
         app:layout_constraintBottom_toTopOf="@id/collections_for_you"/>
 
     <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/chart1"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="32dp"
+        android:id="@+id/pie_chart"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:elevation="2dp"
-        app:layout_constraintStart_toStartOf="@id/main_card"
+        app:layout_constraintBottom_toTopOf="@+id/orange_circle"
         app:layout_constraintEnd_toEndOf="@id/main_card"
-        app:layout_constraintTop_toTopOf="@id/main_card"/>
+        app:layout_constraintStart_toStartOf="@id/main_card"
+        app:layout_constraintTop_toTopOf="@id/main_card" />
 
     <TextView
         android:id="@+id/collections_for_you"
@@ -59,20 +59,20 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        app:cardBackgroundColor="#F5F5F5"
         app:cardCornerRadius="24dp"
-        app:layout_constraintTop_toBottomOf="@id/collections_for_you"
+        app:layout_constraintEnd_toStartOf="@+id/vitamin_d3_meal_card"
         app:layout_constraintStart_toStartOf="parent"
-        app:cardBackgroundColor="#F5F5F5"/>
+        app:layout_constraintTop_toBottomOf="@id/collections_for_you" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/vitamin_d3_meal_card"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         app:cardCornerRadius="24dp"
         app:layout_constraintTop_toBottomOf="@id/collections_for_you"
+        app:layout_constraintStart_toEndOf="@+id/protein_meal_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardBackgroundColor="#F5F5F5"/>
 
@@ -81,21 +81,21 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        app:cardBackgroundColor="#F5F5F5"
         app:cardCornerRadius="24dp"
-        app:layout_constraintTop_toBottomOf="@id/protein_meal_card"
+        app:layout_constraintEnd_toStartOf="@+id/high_carb_meal_card"
         app:layout_constraintStart_toStartOf="parent"
-        app:cardBackgroundColor="#F5F5F5"/>
+        app:layout_constraintTop_toBottomOf="@id/protein_meal_card" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/high_carb_meal_card"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginVertical="16dp"
-        android:layout_marginEnd="16dp"
         app:cardCornerRadius="24dp"
         app:layout_constraintTop_toBottomOf="@id/protein_meal_card"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fiber_meal_card"
         app:cardBackgroundColor="#F5F5F5"/>
 
     <ImageView
