--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -4,5 +4,6 @@
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/app_splash_screen_icon</item>
+        <item name="postSplashScreenTheme">@style/Theme.NutritionsApp</item>
     </style>
 </resources>
