design details screen

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,4 +40,8 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="reduceNormal">
+        <item name="cornerSize">16dp</item>
+    </style>
+
 </resources>
