--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,6 +1,361 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/arrowIcon"
+        android:layout_width="@dimen/size_icon_normal"
+        android:layout_height="@dimen/size_icon_normal"
+        android:layout_marginLeft="@dimen/margin_normal"
+        android:layout_marginTop="@dimen/margin_larg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_arrow_back_24"/>
+
+
+    <TextView
+        android:id="@+id/appbarTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Details"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="@dimen/appbar_title_size"
+        android:layout_marginTop="@dimen/margin_larg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/main_image"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_margin="@dimen/margin_normal"
+        app:layout_constraintTop_toBottomOf="@id/appbarTitle"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/food1"
+        android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/reduceNormal" />
+    <TextView
+        android:id="@+id/title_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name of meal"
+        android:textStyle="bold"
+        android:gravity="start"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:layout_marginTop="@dimen/margin_normal"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:layout_constraintTop_toBottomOf="@id/main_image" />
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pie_chart_details"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="@dimen/margin_mid"
+        android:layout_marginBottom="@dimen/margin_mid"
+        android:elevation="2dp"
+        app:layout_constraintStart_toStartOf="@id/title_details"
+        app:layout_constraintTop_toBottomOf="@id/title_details" />
+
+    <TextView
+        android:id="@+id/carbs_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:textSize="10sp"
+        app:layout_constraintTop_toTopOf="@id/green_circle"
+        app:layout_constraintStart_toEndOf="@id/green_circle"
+        android:text="216 g"/>
+
+    <TextView
+        android:id="@+id/carbs_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:text="Protein"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/carbs_number"
+        app:layout_constraintTop_toBottomOf="@id/carbs_number"
+        />
+
+    <View
+        android:id="@+id/green_circle"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="@dimen/margin_mid"
+        android:elevation="2dp"
+        android:background="@drawable/circle_shape"
+        app:layout_constraintStart_toEndOf="@id/pie_chart_details"
+        app:layout_constraintTop_toTopOf="@id/pie_chart_details"
+        app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
+        android:backgroundTint="@color/primary_color" />
+
+
+
+
+    <TextView
+        android:id="@+id/carbs2_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:textSize="10sp"
+        app:layout_constraintTop_toTopOf="@id/red_circle"
+        app:layout_constraintStart_toEndOf="@id/red_circle"
+        android:text="216 g"/>
+
+    <TextView
+        android:id="@+id/carbs2_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:text="Protein"
+        android:textStyle="bold"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="@id/carbs2_number"
+        app:layout_constraintTop_toBottomOf="@id/carbs2_number"
+        />
+
+    <View
+        android:id="@+id/red_circle"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="@dimen/margin_normal"
+        android:elevation="2dp"
+        android:background="@drawable/circle_shape"
+        app:layout_constraintStart_toEndOf="@id/carbs_text"
+        app:layout_constraintTop_toTopOf="@id/pie_chart_details"
+        app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
+        android:backgroundTint="#FF6752" />
+
+    <TextView
+        android:id="@+id/carbs3_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:textSize="10sp"
+        app:layout_constraintTop_toTopOf="@id/yellow_circle"
+        app:layout_constraintStart_toEndOf="@id/yellow_circle"
+        android:text="216 g"/>
+
+    <TextView
+        android:id="@+id/carbs3_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:text="Protein"
+        android:textStyle="bold"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="@id/carbs3_number"
+        app:layout_constraintTop_toBottomOf="@id/carbs3_number"
+        />
+
+    <View
+        android:id="@+id/yellow_circle"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="@dimen/margin_normal"
+        android:elevation="2dp"
+        android:background="@drawable/circle_shape"
+        app:layout_constraintStart_toEndOf="@id/carbs2_text"
+        app:layout_constraintTop_toTopOf="@id/pie_chart_details"
+        app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
+        android:backgroundTint="#FAB131" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/icon_a3"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="@dimen/margin_mid"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/logo_coffee"
+        app:layout_constraintBottom_toTopOf="@id/icon_d3"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:shapeAppearanceOverlay="@drawable/background_icon"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="Coffe"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_a3"
+        app:layout_constraintStart_toEndOf="@id/icon_a3"
+        app:layout_constraintTop_toTopOf="@id/icon_a3"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="12g"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_a3"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintTop_toTopOf="@id/icon_a3"
+        tools:ignore="MissingConstraints" />
+
+
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/icon_d3"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="@dimen/margin_mid"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/logo_coffee"
+        app:layout_constraintBottom_toTopOf="@id/icon_fat"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:shapeAppearanceOverlay="@drawable/background_icon"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="Coffe"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_d3"
+        app:layout_constraintStart_toEndOf="@id/icon_d3"
+        app:layout_constraintTop_toTopOf="@id/icon_d3"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="12g"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_d3"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintTop_toTopOf="@id/icon_d3"
+        tools:ignore="MissingConstraints" />
+
+
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/icon_fat"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="@dimen/margin_mid"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/logo_coffee"
+        app:layout_constraintBottom_toTopOf="@id/icon_fiber"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:shapeAppearanceOverlay="@drawable/background_icon"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="Coffe"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_fat"
+        app:layout_constraintStart_toEndOf="@id/icon_fat"
+        app:layout_constraintTop_toTopOf="@id/icon_fat"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="12g"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_fat"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintTop_toTopOf="@id/icon_fat"
+        tools:ignore="MissingConstraints" />
+
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/icon_fiber"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="@dimen/margin_mid"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/logo_coffee"
+        app:layout_constraintBottom_toTopOf="@id/icon_caffeine"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:shapeAppearanceOverlay="@drawable/background_icon"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="Coffe"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_fiber"
+        app:layout_constraintStart_toEndOf="@id/icon_fiber"
+        app:layout_constraintTop_toTopOf="@id/icon_fiber"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="12g"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_fiber"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintTop_toTopOf="@id/icon_fiber"
+        tools:ignore="MissingConstraints" />
+
+
+
+
+
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/icon_caffeine"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="@dimen/margin_larg"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/logo_coffee"
+        app:layout_constraintBottom_toTopOf="@id/btn_dialy"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:shapeAppearanceOverlay="@drawable/background_icon"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="Coffe"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_caffeine"
+        app:layout_constraintStart_toEndOf="@id/icon_caffeine"
+        app:layout_constraintTop_toTopOf="@id/icon_caffeine"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="12g"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_caffeine"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintTop_toTopOf="@id/icon_caffeine"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_dialy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/radius_btn"
+        android:text="add to Diary"
+        android:textSize="14sp"
+        android:layout_margin="@dimen/margin_normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintStart_toStartOf="@id/main_image"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
