--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,8 +41,14 @@
     </style>
 <style name="linerlayout">
     <item name="android:orientation">horizontal</item>
-    <item name="android:padding">18dp</item>
+    <item name="android:paddingTop">18dp</item>
+    <item name="android:paddingBottom">17dp</item>
+    <item name="android:paddingLeft">29dp</item>
+    <item name="android:paddingRight">25dp</item>
 </style>
+    <style name="linerlayout2" parent="linerlayout">
+       <item name="android:layout_marginTop">20dp</item>
+    </style>
     <style name="textview">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
