add icon and create method get meal by id

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@id/title_details" />
 
     <TextView
-        android:id="@+id/carbs_number"
+        android:id="@+id/water_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
@@ -82,11 +82,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:text="Protein"
+        android:text="Water"
         android:textSize="10sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/carbs_number"
-        app:layout_constraintTop_toBottomOf="@id/carbs_number"
+        app:layout_constraintStart_toStartOf="@id/water_number"
+        app:layout_constraintTop_toBottomOf="@id/water_number"
         />
 
     <View
@@ -105,7 +105,7 @@
 
 
     <TextView
-        android:id="@+id/carbs2_number"
+        android:id="@+id/sugare_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
@@ -120,11 +120,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:text="Protein"
+        android:text="Sugare"
         android:textStyle="bold"
         android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@id/carbs2_number"
-        app:layout_constraintTop_toBottomOf="@id/carbs2_number"
+        app:layout_constraintStart_toStartOf="@id/sugare_number"
+        app:layout_constraintTop_toBottomOf="@id/sugare_number"
         />
 
     <View
@@ -140,7 +140,7 @@
         android:backgroundTint="#FF6752" />
 
     <TextView
-        android:id="@+id/carbs3_number"
+        android:id="@+id/fat_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
@@ -155,11 +155,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:text="Protein"
+        android:text="Fat"
         android:textStyle="bold"
         android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@id/carbs3_number"
-        app:layout_constraintTop_toBottomOf="@id/carbs3_number"
+        app:layout_constraintStart_toStartOf="@id/fat_number"
+        app:layout_constraintTop_toBottomOf="@id/fat_number"
         />
 
     <View
@@ -178,9 +178,10 @@
         android:id="@+id/icon_a3"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:padding="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_mid"
         android:background="@drawable/background_icon"
-        android:src="@drawable/logo_coffee"
+        android:src="@drawable/ic_fiber"
         app:layout_constraintBottom_toTopOf="@id/icon_d3"
         app:layout_constraintStart_toStartOf="@id/main_image"
         app:shapeAppearanceOverlay="@drawable/background_icon"
@@ -190,13 +191,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="Coffe"
+        android:text="Fiber"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_a3"
         app:layout_constraintStart_toEndOf="@id/icon_a3"
         app:layout_constraintTop_toTopOf="@id/icon_a3"
         tools:ignore="MissingConstraints" />
     <TextView
+        android:id="@+id/count_fiber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
@@ -213,9 +215,10 @@
         android:id="@+id/icon_d3"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:padding="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_mid"
         android:background="@drawable/background_icon"
-        android:src="@drawable/logo_coffee"
+        android:src="@drawable/ic_protein"
         app:layout_constraintBottom_toTopOf="@id/icon_fat"
         app:layout_constraintStart_toStartOf="@id/main_image"
         app:shapeAppearanceOverlay="@drawable/background_icon"
@@ -225,17 +228,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="Coffe"
+        android:text="Protien"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_d3"
         app:layout_constraintStart_toEndOf="@id/icon_d3"
         app:layout_constraintTop_toTopOf="@id/icon_d3"
         tools:ignore="MissingConstraints" />
     <TextView
+        android:id="@+id/protein_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="12g"
+        android:text="15g"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_d3"
         app:layout_constraintEnd_toEndOf="@id/main_image"
@@ -249,8 +253,9 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginBottom="@dimen/margin_mid"
+        android:padding="@dimen/margin_small"
         android:background="@drawable/background_icon"
-        android:src="@drawable/logo_coffee"
+        android:src="@drawable/ic_calcium"
         app:layout_constraintBottom_toTopOf="@id/icon_fiber"
         app:layout_constraintStart_toStartOf="@id/main_image"
         app:shapeAppearanceOverlay="@drawable/background_icon"
@@ -260,17 +265,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="Coffe"
+        android:text="Calcium"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_fat"
         app:layout_constraintStart_toEndOf="@id/icon_fat"
         app:layout_constraintTop_toTopOf="@id/icon_fat"
         tools:ignore="MissingConstraints" />
     <TextView
+        android:id="@+id/calcium_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="12g"
+        android:text="23g"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_fat"
         app:layout_constraintEnd_toEndOf="@id/main_image"
@@ -282,9 +288,11 @@
         android:id="@+id/icon_fiber"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:padding="@dimen/margin_small"
+        android:tint="@color/primary"
         android:layout_marginBottom="@dimen/margin_mid"
         android:background="@drawable/background_icon"
-        android:src="@drawable/logo_coffee"
+        android:src="@drawable/ic_heart_health"
         app:layout_constraintBottom_toTopOf="@id/icon_caffeine"
         app:layout_constraintStart_toStartOf="@id/main_image"
         app:shapeAppearanceOverlay="@drawable/background_icon"
@@ -294,17 +302,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="Coffe"
+        android:text="Cholesterol"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_fiber"
         app:layout_constraintStart_toEndOf="@id/icon_fiber"
         app:layout_constraintTop_toTopOf="@id/icon_fiber"
         tools:ignore="MissingConstraints" />
     <TextView
+        android:id="@+id/cholesterol_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="12g"
+        android:text="10g"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_fiber"
         app:layout_constraintEnd_toEndOf="@id/main_image"
@@ -320,9 +329,10 @@
         android:id="@+id/icon_caffeine"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:padding="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_larg"
         android:background="@drawable/background_icon"
-        android:src="@drawable/logo_coffee"
+        android:src="@drawable/ic_caffeine"
         app:layout_constraintBottom_toTopOf="@id/btn_dialy"
         app:layout_constraintStart_toStartOf="@id/main_image"
         app:shapeAppearanceOverlay="@drawable/background_icon"
@@ -332,17 +342,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="Coffe"
+        android:text="Caffeine"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_caffeine"
         app:layout_constraintStart_toEndOf="@id/icon_caffeine"
         app:layout_constraintTop_toTopOf="@id/icon_caffeine"
         tools:ignore="MissingConstraints" />
     <TextView
+        android:id="@+id/caffeine_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="12g"
+        android:text="11g"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_caffeine"
         app:layout_constraintEnd_toEndOf="@id/main_image"
