create object of meal , fix pie entry and arrow back

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
 
 <ImageButton
@@ -45,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name of meal"
-        android:layout_margin="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="14dp"
         android:textStyle="bold"
         android:gravity="start"
         android:textColor="@color/white"
